--- a/MiniscopeAnimalParam.ipynb
+++ b/MiniscopeAnimalParam.ipynb
@@ -20,7 +20,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "session =  r\"\\\\iss\\karalis\\users\\nikolas.karalis\\Data\\FMI\\Neuromod\\nk63\\nk63_s01_rew_hab\\My_V4_Miniscope\"    # this is where you should store your dataset of videos"
+    "session =  r\"\\\\iss\\karalis\\users\\nikolas.karalis\\Data\\FMI\\Neuromod\\nk50\\nk50_s05_fc_ext\\19_35_46\\My_V4_Miniscope\"    # this is where you should store your dataset of videos"
    ]
   },
   {
@@ -89,9 +89,45 @@
   },
   {
    "cell_type": "markdown",
+   "metadata": {
+    "tags": [
+     "tutorial"
+    ]
+   },
+   "source": [
+    "## Workflow"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "tags": [
+     "tutorial"
+    ]
+   },
+   "source": [
+    "There are 5 main sections in this pipeline: Setting up, Pre-processing, Motion Correction, Initialization, and CNMF, which are composed of interative spatial update and temporal update.\n",
+    "\n",
+    "![workflow](img/workflow.png)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "metadata": {},
    "source": [
     "## load modules"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "scrolled": true
+   },
+   "outputs": [],
+   "source": [
+    "%%skip_cell\n",
+    "print(\"Cell running\")"
    ]
   },
   {
@@ -123,8 +159,17 @@
     "dask.config.set({\"distributed.worker.memory.target\": 0.6})  # Reduce memory pressure\n",
     "dask.config.set({\"distributed.worker.memory.spill\": 0.7})   # Spill to disk before crashing\n",
     "dask.config.set({\"distributed.worker.memory.pause\": 0.8})   # Pause workers before they die\n",
-    "dask.config.set({\"distributed.worker.memory.terminate\": 0.9})  # Kill workers only if extreme\n",
-    "\n",
+    "dask.config.set({\"distributed.worker.memory.terminate\": 0.9})  # Kill workers only if extreme\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "%%capture\n",
+    "# Suppress logs\n",
     "!ffmpeg -i input.mp4 output.mp4"
    ]
   },
@@ -263,7 +308,7 @@
     "# Pre-processing Parameters#\n",
     "param_load_videos = {\n",
     "#############     HERE     #############\n",
-    "    \"pattern\": r\"^(1[1-9])\\.avi$\",#r\"^(1[1-9])\\.avi$\",#\"1.avi\",#r\"^(0|[1-9]|1[0-5])\\.avi$\",#\"[0-9]+\\.avi$\",#\"blabla.avi\",#\"msCam[0-9]+\\.avi$\",\n",
+    "    \"pattern\": \"\\.avi$\",#r\"^(1[1-9])\\.avi$\",#\"1.avi\",#r\"^(0|[1-9]|1[0-5])\\.avi$\",#\"[0-9]+\\.avi$\",#\"blabla.avi\",#\"msCam[0-9]+\\.avi$\",\n",
     "########################################\n",
     "    \"dtype\": np.uint8,\n",
     "    \"downsample\": dict(frame=1, height=1, width=1),\n",
@@ -427,7 +472,7 @@
     "cluster = LocalCluster(\n",
     "#cluster = LocalCUDACluster(\n",
     "    n_workers=4*n_workers,\n",
-    "    memory_limit=\"3GB\",\n",
+    "    memory_limit=\"4GB\",\n",
     "    resources={\"MEM\": 1},\n",
     "    threads_per_worker=2,\n",
     "    dashboard_address=\":8787\",\n",
@@ -463,6 +508,20 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "tags": [
+     "tutorial"
+    ]
+   },
+   "outputs": [],
+   "source": [
+    "print(colored(\"______ LOADING VIDEOS ... ______\", \"light_yellow\"), file = open(\"CON\", \"w\") )\n",
+    "param_load_videos"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {
     "tags": [
@@ -478,6 +537,17 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#Y_fm_chk.max(dim=\"frame\")\n",
+    "varr = load_videos(dpath, **param_load_videos)\n",
+    "varr"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "metadata": {
     "autoscroll": false,
     "ein.tags": "worksheet-0",
@@ -487,9 +557,9 @@
    },
    "outputs": [],
    "source": [
-    "print(colored(\"______ LOADING VIDEOS ... ______\", \"light_yellow\"), file = open(\"CON\", \"w\") )\n",
     "varr = load_videos(dpath, **param_load_videos)\n",
     "chk, _ = get_optimal_chk(varr,csize = 512,  dtype=float)\n",
+    "chk['frame'] = 50\n",
     "vlist = [dpath + os.sep + v for v in os.listdir(dpath) if re.search(param_load_videos['pattern'], v)]\n",
     "print(colored(\"loading {} videos \".format(len(vlist)), 'red'), file = open(\"CON\", \"w\") )\n",
     "print(colored(\"______ VIDEOS LOADED ______\", \"yellow\"), file = open(\"CON\", \"w\") )"
@@ -539,12 +609,14 @@
     "vmin, vmax = varr.min().compute(), varr.max().compute() # Set global color limits based on the data\n",
     "\n",
     "contrasts = []\n",
+    "\n",
     "# Plot each frame in a 4x4 grid\n",
     "for i, ax in enumerate(axes.flat):\n",
     "    im = ax.imshow(varr.sel(frame = i), cmap=cmap, vmin=vmin, vmax=vmax)\n",
     "    ax.set_title(f\"Frame {i+1}\")\n",
     "    ax.axis('off')  # Hide empty subplots\n",
     "    #contrasts.append(np.max(varr.sel(frame = i).values) -np.min(varr.sel(frame = i).values))\n",
+    "\n",
     "\n",
     "plt.suptitle(\"4x4 Heatmaps with Shared Colorbar\", fontsize=16)\n",
     "plt.show()"
@@ -818,6 +890,20 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {
+    "tags": [
+     "tutorial"
+    ]
+   },
+   "source": [
+    "Here we are saving our pre-processed video (`varr_ref`) into the intermediate folder (`intpath`).\n",
+    "Note that for every saved variable a separate folder will be created based on the `.name` attribute of that variable.\n",
+    "And variables with the same `.name` attribute will be saved to same folder regardless the variable name, potentially overwritting each other!\n",
+    "Here we [rename](http://xarray.pydata.org/en/stable/generated/xarray.DataArray.rename.html) it to `\"varr_ref\"` so that the saved folder will be named \"varr_ref.zarr\"."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
@@ -884,6 +970,18 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {
+    "tags": [
+     "tutorial"
+    ]
+   },
+   "source": [
+    "As mentioned before `param_save_minian` decides how your data will be saved and what metadata will be stored.\n",
+    "Additionally we use the `chk` variable earlier to make sure all our data have same chunk size along same dimension."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
@@ -914,6 +1012,15 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "Y.shape, Y.dtype"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -940,13 +1047,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "Y_fm_chk = save_minian(Y.astype(float).rename(\"Y_fm_chk\"), intpath, overwrite=True)\n",
-    "Y_hw_chk = save_minian(\n",
-    "    Y_fm_chk.rename(\"Y_hw_chk\"),\n",
-    "    intpath,\n",
-    "    overwrite=True,\n",
-    "    chunks={\"frame\": -1, \"height\": chk[\"height\"], \"width\": chk[\"width\"]},\n",
-    ")"
+    "%%time\n",
+    "Y_fm_chk = save_minian(Y.astype(float).rename(\"Y_fm_chk\"), intpath, overwrite=True)\n"
    ]
   },
   {
@@ -955,25 +1057,18 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "plt.imshow(Y_fm_chk.sel(frame = 3000))"
-   ]
-  },
-  {
-   "cell_type": "raw",
-   "metadata": {},
-   "source": [
     "# load for debugging \n",
     "varr_ref = xr.open_zarr('./minian_intermediate/varr_ref.zarr')\n",
     "varr = xr.open_zarr('./minian_intermediate/varr.zarr')\n",
     "Y_fm_chk = xr.open_zarr('./minian_intermediate/Y_fm_chk.zarr') \n",
-    "Y_hw_chk = xr.open_zarr('./minian_intermediate/Y_hw_chk.zarr')\n",
+    "# Y_hw_chk = xr.open_zarr('./minian_intermediate/Y_hw_chk.zarr')\n",
     "# varr_ref = xr.open_zarr('./varr_ref_pipeline.zarr')\n",
     "# varr = xr.open_zarr('./varr_pipeline.zarr')\n",
     "# Y_fm_chk = xr.open_zarr('./Y_fm_chk_pipeline.zarr') \n",
     "# Y_hw_chk = xr.open_zarr('./Y_hw_chk_pipeline.zarr')\n",
     "\n",
     "Y_fm_chk = Y_fm_chk.to_array().squeeze(axis=0)\n",
-    "Y_hw_chk = Y_hw_chk.to_array().squeeze(axis=0)\n",
+    "# Y_hw_chk = Y_hw_chk.to_array().squeeze(axis=0)\n",
     "varr = varr.to_array().squeeze(axis=0)\n",
     "varr_ref = varr_ref.to_array().squeeze(axis=0)"
    ]
@@ -986,10 +1081,8 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "raw",
    "metadata": {},
-   "outputs": [],
    "source": [
     "vid_arr = xr.concat([varr_ref, Y_fm_chk], \"width\").chunk({\"width\": -1})\n",
     "write_video(vid_arr, \"minian_mc.mp4\",param_save_minian['dpath']) #dpath)"
@@ -1019,10 +1112,8 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
    "source": [
     "print(colored(\"______ IDENTIFYING CELLS ______\", \"light_yellow\"), file = open(\"CON\", \"w\") )\n",
     "max_proj = save_minian(\n",
@@ -1031,111 +1122,38 @@
    ]
   },
   {
-   "cell_type": "raw",
+   "cell_type": "code",
+   "execution_count": null,
    "metadata": {},
+   "outputs": [],
    "source": [
-    "threshold = (Y_fm_chk.mean() + 100 * Y_fm_chk.std()).values\n",
+    "#threshold = (Y_fm_chk.mean() + 100 * Y_fm_chk.std()).values\n",
+    "threshold = 80.0\n",
     "print(threshold)"
    ]
   },
   {
-   "cell_type": "raw",
-   "metadata": {},
-   "source": [
-    "masked_array = xr.where(Y_fm_chk <= threshold, Y_fm_chk, np.nan).compute()"
-   ]
-  },
-  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "#masked_array = xr.where(Y_fm_chk <= threshold, Y_fm_chk, np.nan).compute()\n",
-    "#masked_array = masked_array.to_dataset(name='masked').to_zarr('masked_data.zarr', mode='w')"
+    "# 1) Replace values above threshold with NaN\n",
+    "masked_array = xr.where(Y_fm_chk <= threshold, Y_fm_chk, np.nan)\n",
+    "# 2) Find the maximum across (width, height) of only the values that survived the mask\n",
+    "#    We often do .compute() here so we have a small in-memory array\n",
+    "frame_max = masked_array.min(dim=(\"width\", \"height\"), skipna=True).compute()\n",
+    "# 3) Wherever original array is NaN, fill with the broadcasted max\n",
+    "#    xarray will handle broadcasting of \"frame_max\" automatically\n",
+    "Y_fm_chk = xr.where(masked_array.notnull(), masked_array, frame_max)\n",
+    "# 4) Persist if desired\n"
    ]
   },
   {
    "cell_type": "raw",
    "metadata": {},
-   "source": [
-    "frame_max = masked_array.max(dim=(\"width\", \"height\"), skipna=True)"
-   ]
-  },
-  {
-   "cell_type": "raw",
-   "metadata": {},
-   "source": [
-    "frame_max_expanded = frame_max.expand_dims({\"width\": len(Y_fm_chk.width), \"height\": len(Y_fm_chk.height)})  # Adds dims for broadcasting\n",
-    "frame_max_tiled = frame_max_expanded.broadcast_like(masked_array)"
-   ]
-  },
-  {
-   "cell_type": "raw",
-   "metadata": {},
-   "source": [
-    "masked_Y_fm_chk = xr.where(masked_array.notnull(), masked_array, frame_max_tiled)  #masked_array.fillna(frame_max_tiled).compute()"
-   ]
-  },
-  {
-   "cell_type": "raw",
-   "metadata": {},
-   "source": [
-    "Y_fm_chk = masked_Y_fm_chk"
-   ]
-  },
-  {
-   "cell_type": "raw",
-   "metadata": {},
-   "source": [
-    "client.cancel(Y_fm_chk_test)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
    "source": [
     "write_video( varr, \"processedvid.mp4\",param_save_minian['dpath'])"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# new_xr = save_minian(\n",
-    "#     masked_Y_fm_chk.max(\"frame\").rename(\"max_proj\"), **param_save_minian\n",
-    "# )"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "max_proj = Y_fm_chk.max(\"frame\").rename(\"max_proj\")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "plt.imshow(Y_fm_chk.max(\"frame\"))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "plt.imshow(max_proj)"
    ]
   },
   {
@@ -1165,15 +1183,6 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "Y_fm_chk"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
     "param_seeds_init['wnd_size'] = 7000#20000\n",
     "param_seeds_init['stp_size'] = 3000#15000"
    ]
@@ -1186,6 +1195,38 @@
    "source": [
     "seeds = seeds_init(Y_fm_chk, **param_seeds_init)\n",
     "seeds"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "Y_hw_chk = save_minian(\n",
+    "    Y_fm_chk.rename(\"Y_hw_chk\"),\n",
+    "    intpath,\n",
+    "    overwrite=True,\n",
+    "    chunks={\"frame\": -1, \"height\": chk[\"height\"], \"width\": chk[\"width\"]},\n",
+    ")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "max_proj = Y_fm_chk.max(\"frame\").rename(\"max_proj\").compute()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "plt.imshow(max_proj)"
    ]
   },
   {
@@ -1254,8 +1295,10 @@
    ]
   },
   {
-   "cell_type": "raw",
+   "cell_type": "code",
+   "execution_count": null,
    "metadata": {},
+   "outputs": [],
    "source": [
     "seeds['is_artefact'] = False\n",
     "seeds['is_artefact'] = seeds['width'].isin(np.concatenate((width_out[0] ,width_out[0]+1,width_out[0]-1))) | seeds['height'].isin(np.concatenate((height_out[0] ,height_out[0]+1,height_out[0]-1)))\n",
@@ -1606,9 +1649,10 @@
    "outputs": [],
    "source": [
     "#%%time\n",
-    "#seeds_final = seeds[seeds[\"mask_ks\"] & seeds[\"mask_pnr\"] & ~seeds[\"is_artefact\"]].reset_index(drop=True)\n",
-    "seeds_final = seeds[seeds[\"mask_ks\"] & seeds[\"mask_pnr\"]].reset_index(drop=True)\n",
-    "seeds_final[0:400]"
+    "seeds_final = seeds[seeds[\"mask_ks\"] & seeds[\"mask_pnr\"] & ~seeds[\"is_artefact\"]].reset_index(drop=True)\n",
+    "# seeds_final = seeds[seeds[\"mask_ks\"] & seeds[\"mask_pnr\"]].reset_index(drop=True)\n",
+    "\n",
+    "# seeds_final[0:400]"
    ]
   },
   {
@@ -1824,64 +1868,6 @@
    ]
   },
   {
-   "cell_type": "raw",
-   "metadata": {},
-   "source": [
-    "Y_fm_chk.to_dataset().to_zarr('Y_fm_chk.zarr', mode='a', compute=False)\n",
-    "A.to_dataset().to_zarr('A.zarr', mode='a', compute=False)\n",
-    "C_chk.to_dataset().to_zarr('C_chk.zarr', mode='a', safe_chunks=False, compute=False)"
-   ]
-  },
-  {
-   "cell_type": "raw",
-   "metadata": {},
-   "source": [
-    "Y_fm_chk = xr.open_zarr('Y_fm_chk.zarr/')\n",
-    "A = xr.open_zarr('A.zarr/')\n",
-    "C_chk = xr.open_zarr('C_chk.zarr/')\n",
-    "\n",
-    "Y_fm_chk = Y_fm_chk.to_array().squeeze()\n",
-    "A = A.to_array().squeeze()\n",
-    "C_chk = C_chk.to_array().squeeze()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "C_chk"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "lalala  = compute_AtC(A, C_chk)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "test = (Y_fm_chk - lalala).clip(0)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "test.persist().compute()"
-   ]
-  },
-  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
@@ -1890,6 +1876,33 @@
    "outputs": [],
    "source": [
     "b, f = update_background(Y_fm_chk, A, C_chk)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "plt.imshow(Y_fm_chk[500])"
+   ]
+  },
+  {
+   "cell_type": "raw",
+   "metadata": {},
+   "source": [
+    "max_frame = Y_fm_chk.max(dim=\"frame\").compute()\n",
+    "print(f'max frame pixel: {max_frame.max().values}')\n",
+    "plt.imshow(max_frame)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "plt.imshow(b)"
    ]
   },
   {
@@ -3630,6 +3643,13 @@
     "client.close()\n",
     "cluster.close()"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
