last fully working version

--- a/MiniscopeAnimalParam.ipynb
+++ b/MiniscopeAnimalParam.ipynb
@@ -20,7 +20,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "session =  r\"\\\\iss\\karalis\\users\\nikolas.karalis\\Data\\FMI\\Neuromod\\nk50\\nk50_s05_fc_ext\\19_35_46\\My_V4_Miniscope\"    # this is where you should store your dataset of videos"
+    "session =  r\"\\\\iss\\karalis\\users\\nikolas.karalis\\Data\\FMI\\Neuromod\\nk50\\nk50_s06_fc_ctxretr\\20_14_03\\My_V4_Miniscope\"    # this is where you should store your dataset of videos"
    ]
   },
   {
@@ -28,13 +28,6 @@
    "metadata": {},
    "source": [
     "#   <font color='red'> ____________________________________________________________</font>"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "THIS IS FOR RUNNING WITHOUT PARAMETER TUNING"
    ]
   },
   {
@@ -78,37 +71,12 @@
     "from IPython.core.magic import register_cell_magic\n",
     "\n",
     "SKIP_CELLS = not interactive\n",
-    "\n",
     "@register_cell_magic\n",
     "def skip_cell(line, cell):\n",
     "    if not SKIP_CELLS:\n",
     "        exec(cell, globals())\n",
     "    else:\n",
     "        print(\"Skipping this cell.\")"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {
-    "tags": [
-     "tutorial"
-    ]
-   },
-   "source": [
-    "## Workflow"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {
-    "tags": [
-     "tutorial"
-    ]
-   },
-   "source": [
-    "There are 5 main sections in this pipeline: Setting up, Pre-processing, Motion Correction, Initialization, and CNMF, which are composed of interative spatial update and temporal update.\n",
-    "\n",
-    "![workflow](img/workflow.png)"
    ]
   },
   {
@@ -144,6 +112,7 @@
     "import sys\n",
     "import re\n",
     "import json\n",
+    "import pandas as pd\n",
     "\n",
     "import holoviews as hv\n",
     "import numpy as np\n",
@@ -159,16 +128,8 @@
     "dask.config.set({\"distributed.worker.memory.target\": 0.6})  # Reduce memory pressure\n",
     "dask.config.set({\"distributed.worker.memory.spill\": 0.7})   # Spill to disk before crashing\n",
     "dask.config.set({\"distributed.worker.memory.pause\": 0.8})   # Pause workers before they die\n",
-    "dask.config.set({\"distributed.worker.memory.terminate\": 0.9})  # Kill workers only if extreme\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "%%capture\n",
+    "dask.config.set({\"distributed.worker.memory.terminate\": 0.9})  # Kill workers only if extreme\n",
+    "\n",
     "# Suppress logs\n",
     "!ffmpeg -i input.mp4 output.mp4"
    ]
@@ -508,20 +469,6 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "tags": [
-     "tutorial"
-    ]
-   },
-   "outputs": [],
-   "source": [
-    "print(colored(\"______ LOADING VIDEOS ... ______\", \"light_yellow\"), file = open(\"CON\", \"w\") )\n",
-    "param_load_videos"
-   ]
-  },
-  {
    "cell_type": "markdown",
    "metadata": {
     "tags": [
@@ -532,17 +479,6 @@
     "If you wish to downsample the video, pass in a dictionary to `downsample`, with the name of dimensions as keys and  the downsampling folds as integer value.\n",
     "For example, `downsample=dict(\"frame\"=2)` will temporally downsample the video with a factor of 2.\n",
     "`downsample_strategy` will assume two values: either `\"subset\"`, meaning downsampling are carried out simply by subsetting the data, or `\"mean\"`, meaning a mean will be calculated on the window of downsampling (the latter being slower)."
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "#Y_fm_chk.max(dim=\"frame\")\n",
-    "varr = load_videos(dpath, **param_load_videos)\n",
-    "varr"
    ]
   },
   {
@@ -890,20 +826,6 @@
    ]
   },
   {
-   "cell_type": "markdown",
-   "metadata": {
-    "tags": [
-     "tutorial"
-    ]
-   },
-   "source": [
-    "Here we are saving our pre-processed video (`varr_ref`) into the intermediate folder (`intpath`).\n",
-    "Note that for every saved variable a separate folder will be created based on the `.name` attribute of that variable.\n",
-    "And variables with the same `.name` attribute will be saved to same folder regardless the variable name, potentially overwritting each other!\n",
-    "Here we [rename](http://xarray.pydata.org/en/stable/generated/xarray.DataArray.rename.html) it to `\"varr_ref\"` so that the saved folder will be named \"varr_ref.zarr\"."
-   ]
-  },
-  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
@@ -1017,7 +939,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "Y.shape, Y.dtype"
+    "plt.imshow(Y.sel(frame = 4000))"
    ]
   },
   {
@@ -1028,27 +950,13 @@
    ]
   },
   {
-   "cell_type": "markdown",
-   "metadata": {
-    "tags": [
-     "tutorial"
-    ]
-   },
-   "source": [
-    "Here we save two versions of the motion-corrected movie `Y`.\n",
-    "Their contents are identical.\n",
-    "The only difference is how they are chunked.\n",
-    "Also note that we convert the data to `float` type for better downstream processing."
-   ]
-  },
-  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
     "%%time\n",
-    "Y_fm_chk = save_minian(Y.astype(float).rename(\"Y_fm_chk\"), intpath, overwrite=True)\n"
+    "Y_fm_chk = save_minian(Y.astype(float).rename(\"Y_fm_chk\"), intpath, overwrite=True)"
    ]
   },
   {
@@ -1057,18 +965,11 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# load for debugging \n",
     "varr_ref = xr.open_zarr('./minian_intermediate/varr_ref.zarr')\n",
     "varr = xr.open_zarr('./minian_intermediate/varr.zarr')\n",
     "Y_fm_chk = xr.open_zarr('./minian_intermediate/Y_fm_chk.zarr') \n",
-    "# Y_hw_chk = xr.open_zarr('./minian_intermediate/Y_hw_chk.zarr')\n",
-    "# varr_ref = xr.open_zarr('./varr_ref_pipeline.zarr')\n",
-    "# varr = xr.open_zarr('./varr_pipeline.zarr')\n",
-    "# Y_fm_chk = xr.open_zarr('./Y_fm_chk_pipeline.zarr') \n",
-    "# Y_hw_chk = xr.open_zarr('./Y_hw_chk_pipeline.zarr')\n",
     "\n",
     "Y_fm_chk = Y_fm_chk.to_array().squeeze(axis=0)\n",
-    "# Y_hw_chk = Y_hw_chk.to_array().squeeze(axis=0)\n",
     "varr = varr.to_array().squeeze(axis=0)\n",
     "varr_ref = varr_ref.to_array().squeeze(axis=0)"
    ]
@@ -1078,6 +979,15 @@
    "metadata": {},
    "source": [
     "## generate video for motion-correction"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# FIX THE VIDEO THING"
    ]
   },
   {
@@ -1112,13 +1022,33 @@
    ]
   },
   {
-   "cell_type": "markdown",
+   "cell_type": "code",
+   "execution_count": null,
    "metadata": {},
+   "outputs": [],
    "source": [
     "print(colored(\"______ IDENTIFYING CELLS ______\", \"light_yellow\"), file = open(\"CON\", \"w\") )\n",
     "max_proj = save_minian(\n",
     "    Y_fm_chk.max(dim=\"frame\").rename(\"max_proj\"), **param_save_minian\n",
     ").compute()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#FIX THRESHOLD HARD CODED"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "plt.imshow(Y.sel(frame = 4000))"
    ]
   },
   {
@@ -1138,15 +1068,18 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# 1) Replace values above threshold with NaN\n",
     "masked_array = xr.where(Y_fm_chk <= threshold, Y_fm_chk, np.nan)\n",
-    "# 2) Find the maximum across (width, height) of only the values that survived the mask\n",
-    "#    We often do .compute() here so we have a small in-memory array\n",
     "frame_max = masked_array.min(dim=(\"width\", \"height\"), skipna=True).compute()\n",
-    "# 3) Wherever original array is NaN, fill with the broadcasted max\n",
-    "#    xarray will handle broadcasting of \"frame_max\" automatically\n",
-    "Y_fm_chk = xr.where(masked_array.notnull(), masked_array, frame_max)\n",
-    "# 4) Persist if desired\n"
+    "Y_fm_chk = xr.where(masked_array.notnull(), masked_array, frame_max)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# FIX THE VIDEO THING"
    ]
   },
   {
@@ -1183,6 +1116,15 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# FIX THE Values"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "param_seeds_init['wnd_size'] = 7000#20000\n",
     "param_seeds_init['stp_size'] = 3000#15000"
    ]
@@ -1193,8 +1135,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "seeds = seeds_init(Y_fm_chk, **param_seeds_init)\n",
-    "seeds"
+    "seeds = seeds_init(Y_fm_chk, **param_seeds_init)"
    ]
   },
   {
@@ -1212,10 +1153,8 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
    "source": [
     "max_proj = Y_fm_chk.max(\"frame\").rename(\"max_proj\").compute()"
    ]
@@ -1227,19 +1166,6 @@
    "outputs": [],
    "source": [
     "plt.imshow(max_proj)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {
-    "tags": [
-     "tutorial"
-    ]
-   },
-   "source": [
-    "The `seeds` variable is a [pandas.DataFrame](https://pandas.pydata.org/pandas-docs/stable/reference/api/pandas.DataFrame.html), with each row representing a seed.\n",
-    "The column \"height\" and \"width\" defines the location of the seed.\n",
-    "The column \"seeds\" is the number of chunks where the particular seed/pixel is considered a local maxima."
    ]
   },
   {
@@ -1257,19 +1183,15 @@
    "source": [
     "bins = np.arange(0, len(varr.height)-1, 1)\n",
     "counts, bin_edges = np.histogram(seeds.height.values, bins)\n",
-    "import pandas as pd\n",
     "s = pd.Series(counts)\n",
     "\n",
     "window_size = 10\n",
     "rolling_mean = s.rolling(window_size, center = True).mean().fillna(0)\n",
     "\n",
     "threshold_height = 3*np.std(counts)+rolling_mean\n",
-    "#plt.plot(counts)\n",
-    "#plt.plot(threshold_height, color = 'r')\n",
     "\n",
     "height_out = np.where(counts > threshold_height)\n",
-    "print(height_out)\n",
-    "#plt.xlim([230, 240])"
+    "print(height_out)"
    ]
   },
   {
@@ -1287,11 +1209,8 @@
     "rolling_mean = s.rolling(window_size, center = True).mean().fillna(0)\n",
     "\n",
     "threshold_width = 3*np.std(counts)+rolling_mean\n",
-    "#plt.plot(counts)\n",
-    "#plt.plot(3*np.std(counts)+rolling_mean, color = 'r')\n",
     "\n",
-    "width_out = np.where(counts > threshold_width)\n",
-    "print(width_out)"
+    "width_out = np.where(counts > threshold_width)"
    ]
   },
   {
@@ -1303,9 +1222,7 @@
     "seeds['is_artefact'] = False\n",
     "seeds['is_artefact'] = seeds['width'].isin(np.concatenate((width_out[0] ,width_out[0]+1,width_out[0]-1))) | seeds['height'].isin(np.concatenate((height_out[0] ,height_out[0]+1,height_out[0]-1)))\n",
     "\n",
-    "## IMPORTANT ##\n",
-    "seeds = seeds[seeds['is_artefact'] == False]\n",
-    "(seeds)"
+    "seeds = seeds[seeds['is_artefact'] == False]"
    ]
   },
   {
@@ -1370,19 +1287,6 @@
     "            kdims=\"trace\",\n",
     "        ).collate()\n",
     "        smooth_dict[freq] = hv_trace"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {
-    "tags": [
-     "tutorial"
-    ]
-   },
-   "source": [
-    "\n",
-    "At the end of the process, we put together a `smooth_dict`.\n",
-    "Here we convert that into an interactive plot, from which we can determine the frequency that best separates noise and signal."
    ]
   },
   {
@@ -3448,10 +3352,8 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
    "source": [
     "#%%time\n",
     "generate_videos(varr.sel(subset), Y_fm_chk, A=A, C=C_chk, vpath=param_save_minian['dpath'])#dpath)"
